change blog url

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Libin Joseph
 description: 'Libin Joseph - Software Development, Xamarin'
-url: 'http://libinjoseph.com/jekyll-uno'
-baseurl: '/jekyll-uno'
+url: 'https://libin85.github.io/'
+baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
