added the disqus comment plugin

--- a/_config.yml
+++ b/_config.yml
@@ -38,5 +38,11 @@ kramdown:
   # do not replace newlines by <br>s
   hard_wrap: false
 
+# Disqus Comments
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: libinjoseph
+
 plugins: ['jekyll-paginate']
 exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'screenshot.png']
