--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
 title: Libin Joseph
-description: 'Libin Joseph - Software Development, Xamarin'
+description: 'Trainer, Software Developer, Social Worker'
 url: 'https://libin85.github.io/'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
-# disqus_shortname: 'your-disqus-name'
 
 author:
   name: 'Libin Joseph'
