--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Libin Joseph
-description: 'Trainer, Software Developer, Social Worker'
+description: 'Software Consultant, Open-Source Enthusiast and Trainer'
 url: 'https://libin85.github.io/'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
